# devset

./: .clineignore  .gitignore  .gitmodules  404.html  Gemfile  README.md  TODO.md  _config.yml  docs_mapping.json  feed.xml  index.html  index.md  mkdocs.yml  reproduce_issue.sh  sitemap.xml
.clinerules/: 00-claude-4-sonnet-emulation.md  01-discovery-protocol.md  01-general.md  02-code-standards.md  02-project-specific.md  03-environment-safety.md  04-cross-language-patterns.md  05-documentation-standards.md
.clinerules/workflows/: reflect-and-learn.md
.devcontainer/: devcontainer.json
.github/workflows/: gh-pages.yml
JOB_ROLE_ORGANIZATION/JOB_ROLE_ORGANIZATION/: index.html
_data/: navigation.yml
adr/0001-example-architecture-decision/: index.html
adr/0001_example_architecture_decision/: index.html
adr/template/: index.html
assets/css/: style.css.map
dgx-spark/: README.md
dgx-spark/docs/: user_guide.md
dgx-spark/scripts/: TODO.md  dgx-spark-distributed-model-config.json  models.db  run-distributed-model.sh
dgx-spark/tests/: test_converter_discovery.py  test_run_distributed_model.sh  test_vram_logic.sh
docs/: JOB_ROLE_ORGANIZATION.md  _config.yml  index.html  index.md  technical_design_document.md
docs/JOB_ROLE_ORGANIZATION/: JOB_ROLE_ORGANIZATION.md
docs/_data/: navigation.yml
docs/corporate_strategy/: corporate_structuring.md  financial_strategy.md  organizational_structure.md  tax_strategy.md
docs/engineering_standards/: code_review_guidelines.md  engineering_principles.md  incident_management.md  on_call_guide.md  post_mortem_guide.md  release_process.md  testing_standards.md
docs/interview-prep/: data-engineering.md  data-science.md  golang.md  java.md  kotlin.md  python.md  software-engineering.md  sql.md  system-design.md  typescript.md
docs/interview-questions/: javascript.md  job_role_organization.md  protocol-buffers.md  sql.md
docs/interview_questions/: data_infrastructure.md  golang.md  job_role_organization.md  protocol_buffers.md  typescript.md
docs/job_roles/: job_role_organization.md
docs/onboarding/: checklist.md  culture_and_values.md  engineering_bootcamp.md  index.md  tools_and_access.md
docs/playbooks/: bad_deployment.md  certificate_expiry.md  database_failover.md  dependency_failure.md  disk_space_exhaustion.md  high_error_rate.md  high_latency.md  index.md  memory_leak_oom.md
docs/policies/: acceptable_use_policy.md  anti_harassment_policy.md  code_of_conduct.md  data_privacy_policy.md  document_retention_policy.md  incident_response_plan.md  information_security_policy.md  intellectual_property_policy.md  open_source_policy.md  performance_review_policy.md  remote_work_policy.md  social_media_policy.md  travel_expense_policy.md  whistleblower_policy.md
docs/technical_design_doc/: index.html
docs/technical_support/: index.md
docs/training/: index.md
docs/user_management/: group_hierarchy.md
gh-tools/gh-project-management-toolkit/: .bazelrc  .gitignore  BUILD.bazel  MODULE.bazel  Makefile  README.md  pyproject-setup.md  pyproject.toml  pyrightconfig.json
gh-tools/gh-project-management-toolkit/src/gh_project_toolkit/: BUILD.bazel  __init__.py  cli.py  models.py  protobuf_helpers.py
gh-tools/gh-project-management-toolkit/src/gh_project_toolkit/config/: __init__.py  defaults.py  milestones.py
gh-tools/gh-project-management-toolkit/src/gh_project_toolkit/lib/: __init__.py  duplicates.py  github_api.py  issues.py  labels.py  logging.py  projects.py  validation.py
gh-tools/gh-project-management-toolkit/src/gh_project_toolkit/protobuf/: __init__.py
gh-tools/gh-project-management-toolkit/src/gh_project_toolkit/protos/: BUILD.bazel  README.md  __init__.py  common.proto  issue.proto  label.proto  milestone.proto  project.proto  response.proto
gh-tools/gh-project-management-toolkit/tests/: BUILD.bazel  README.md  conftest.py
gh-tools/gh-project-management-toolkit/tests/test_config/: test_defaults.py  test_milestones.py
gh-tools/gh-project-management-toolkit/tests/test_lib/: test_duplicates.py  test_issues.py  test_labels.py  test_logging.py  test_validation.py
interview-prep/data-analysis/: index.html
interview-prep/data-engineering/: index.html
interview-prep/data-infrastructure/: index.html
interview-prep/data-science/: index.html
interview-prep/golang/: index.html
interview-prep/java/: index.html
interview-prep/javascript/: index.html
interview-prep/kotlin/: index.html
interview-prep/protocol-buffers/: index.html
interview-prep/python/: index.html
interview-prep/software-engineering/: index.html
interview-prep/sql/: index.html
interview-prep/system-design/: index.html
interview-prep/typescript/: index.html
interview-questions/data-analysis/: index.html
interview-questions/data-engineering/: index.html
interview-questions/data-infrastructure/: index.html
interview-questions/data-science/: index.html
interview-questions/golang/: index.html
interview-questions/java/: index.html
interview-questions/javascript/: index.html
interview-questions/job_role_organization/: index.html
interview-questions/kotlin/: index.html
interview-questions/protocol-buffers/: index.html
interview-questions/python/: index.html
interview-questions/software-engineering/: index.html
interview-questions/sql/: index.html
interview-questions/system-design/: index.html
interview-questions/typescript/: index.html
interview_questions/: data_analysis.md  java.md  javascript.md  kotlin.md  python.md  sql.md
interview_questions/data_analysis/: index.html
interview_questions/data_engineering/: index.html
interview_questions/data_infrastructure/: index.html
job_roles/: job_role_organization.md
mcp-stack/: .env.example  docker-compose.yml
memory-bank/: activeContext.md  productContext.md  progress.md  projectbrief.md  systemPatterns.md  techContext.md
pipelines/: README.md
scripts/: enrich_docs.py  expand_docs.py  generate_interview_questions.py  list_roles.py  reorganize_docs.py
search/: search_index.json
technical_design_doc/: index.html
(+1655 files in other folders)
