# MODULE.bazel - Bzlmod manifest for gh-project-management-toolkit
#
# This file declares external dependencies using Bzlmod (Bazel 5+).
# It replaces the traditional WORKSPACE file approach with modern dependency management.
#
# Reference: https://bazel.build/external/module-deps

module(
    name = "gh_project_toolkit",
    version = "1.0.0",
)

# =============================================================================
# Bazel and Rules Dependencies
# =============================================================================

# platforms - Required for constraint resolution and toolchain selection
bazel_dep(name = "platforms", version = "0.0.10")

# rules_python - Python build rules, toolchains, and utilities
# Version 0.29.0 is compatible with Bazel 8.x
bazel_dep(name = "rules_python", version = "0.29.0")

use_extension(
    "@rules_python//python/extensions:python.bzl",
    "python_ext",
)